# paper-rag-assistant

./: .gitignore  LICENSE  README.md  README_CH.md  app.py  demo.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: answer_eval_questions.json  paper_metadata.json
docs/: interview_script.md  project_showcase.md  qasper_evaluation_report.md  rag_evaluation_guide.md  scifact_evaluation_report.md
eval/results/: qasper_dev_evidence_oracle_paper_paperk20_chunkk8_topk8_metrics.json  qasper_dev_evidence_paperk20_chunkk8_topk8_metrics.json  scifact_bm25_metrics.json  scifact_bm25_rankings.json  scifact_dense_metrics.json  scifact_dense_rankings.json  scifact_hybrid_metrics.json  (+6 more)
outputs/: answer_eval_report.md  answer_eval_results.jsonl  batch_answers.md  demo_qa.md  engineered_rag_eval.md  hybrid_retrieval_eval.md  query_router_eval.md  reranker_ablation.md  retrieval_eval.md  retrieval_experiment.md  sample_answers.md
scripts/: build_qasper_project_index.py  build_scifact_project_index.py  eval_beir_scifact.py  eval_project_retriever_scifact.py  eval_qasper_evidence_retrieval.py  inspect_qasper_local.py  summarize_scifact_results.py
src/: __init__.py  batch_test.py  bm25_retriever.py  build_index.py  build_paper_catalog.py  eval_answer_quality.py  eval_engineered_rag.py  eval_hybrid_retrieval.py  eval_query_router.py  eval_reranker_ablation.py  eval_retrieval.py  load_pdf.py  query_router.py  rag_engineered.py  rag_qa.py  reranker.py  retrieval_experiment.py  retrieve.py  split_text.py  test_llm.py
tests/: test_imports.py
