[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-rag-assistant"
version = "0.1.0"
description = "An engineered RAG system for academic paper question answering"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "langchain-community>=0.1.0",
    "langchain-chroma>=0.1.0",
    "langchain-text-splitters>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "pypdf>=4.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "rank-bm25>=0.2.0",
    "streamlit>=1.28.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
paper-rag = "rag_engineered:main"
